dataset1235/2025-2/1379599236/users/2397405626/executions/2110095464_3044199709.log
== SUBMISSION (2025-08-25 19:31:01)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
porcento = prob*100
print(round(prob,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 0.97
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 0.51
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 0.17
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 0.86
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 0.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:50)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:21:51)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:57)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:28:22)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:31:32)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
porcento = prob*100
print(round(porcento,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.04
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 50.73
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 16.7
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.41
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 53.83
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:53)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:27:12)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)

prob = 1-(fac1/fac2)*(1/(365**pessoas))

print(round(prob,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 0.97
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 0.51
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 0.17
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 0.86
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 0.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:26:50)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)

prob = 1-(fac1/fac2)*(1/(365**pessoas)))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
File "XXXX", line 7
    prob = 1-(fac1/fac2)*(1/(365**pessoas)))
                                           ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:31:04)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
porcento = prob*100
print(round(prob,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 0.97
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 0.51
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 0.17
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 0.86
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 0.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:24:05)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prob = 1-(((math.factorial(365))/(365-pessoas))*(1/(365**pessoas)))
               ~~~~~~~~~~~~~~~~~~~~~^^~~~~~~~~~~~~
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:28:12)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:27:07)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)

prob = 1-(fac1/fac2)*(1/(365**pessoas))

print(round(prob,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 0.97
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 0.51
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 0.17
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 1.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 0.86
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 0.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:01)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = float(1-(fac1/fac2)*(1/(365**pessoas)))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:28:15)
-- CODE: 
import math

pessoas = int(input("Informe o numero de pessoas: "))
fac1 = math.factorial(365)
fac2 = math.factorial(365-pessoas)
prob = 1-(fac1/fac2)*(1/(365**pessoas))
print((round(prob,2))*100)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
---- correct output:
97.04
---- user output:
Informe o numero de pessoas: 97.0
-- TEST CASE 2:
---- input:
23
---- correct output:
50.73
---- user output:
Informe o numero de pessoas: 51.0
-- TEST CASE 3:
---- input:
12
---- correct output:
16.7
---- user output:
Informe o numero de pessoas: 17.0
-- TEST CASE 4:
---- input:
99
---- correct output:
100.0
---- user output:
Informe o numero de pessoas: 100.0
-- TEST CASE 5:
---- input:
38
---- correct output:
86.41
---- user output:
Informe o numero de pessoas: 86.0
-- TEST CASE 6:
---- input:
24
---- correct output:
53.83
---- user output:
Informe o numero de pessoas: 54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
